--- a/apptemplates/simplenodeservice-content/backstagetemplates/catalog-info.yaml
+++ b/apptemplates/simplenodeservice-content/backstagetemplates/catalog-info.yaml
@@ -14,12 +14,12 @@ metadata:
     - url: https://github.com/nemalipuri/platform-engineering-demo-ag.git
       title: Github Repo
       icon: github
-    - url: https://cuddly-potato-6w6pp44vv524j66-80.GITHUB_CODESPACES_PORT_FORWARDING_DOMAIN_PLACEHOLDER/${{ values.projectName }}-${{ values.teamIdentifier }}-${{ values.releaseStage }}
+    - url: https://cuddly-potato-6w6pp44vv524j66-80.app.github.dev/${{ values.projectName }}-${{ values.teamIdentifier }}-${{ values.releaseStage }}
       title: "Browse Application"
       icon: subject
     - title: View in ArgoCD
       icon: catalog
-      url: https://cuddly-potato-6w6pp44vv524j66-30100.GITHUB_CODESPACES_PORT_FORWARDING_DOMAIN_PLACEHOLDER/applications/argocd/${{ values.projectName }}-${{ values.teamIdentifier }}-${{ values.releaseStage }}
+      url: https://cuddly-potato-6w6pp44vv524j66-30100.app.github.dev/applications/argocd/${{ values.projectName }}-${{ values.teamIdentifier }}-${{ values.releaseStage }}
     - title: View in Dynatrace
       icon: catalog
       url: https://ppz44993.apps.dynatrace.com
