--- a/gitops/manifests/platform/argoconfig/argocd-cm.yml
+++ b/gitops/manifests/platform/argoconfig/argocd-cm.yml
@@ -14,4 +14,4 @@ data:
   # Enables application status badge feature
   statusbadge.enabled: "true"
   context: |
-    argocdUrl: "https://cuddly-potato-6w6pp44vv524j66-30100.GITHUB_CODESPACES_PORT_FORWARDING_DOMAIN_PLACEHOLDER"  
+    argocdUrl: "https://cuddly-potato-6w6pp44vv524j66-30100.app.github.dev"  
