--- a/gitops/monaco/configure-platform/synthetic-monitor/monitors.yml
+++ b/gitops/monaco/configure-platform/synthetic-monitor/monitors.yml
@@ -3,7 +3,7 @@ configs:
   config:
     name: "backstage | platform | healthcheck"
     parameters:
-      baseUrl: "https://cuddly-potato-6w6pp44vv524j66-30105.GITHUB_CODESPACES_PORT_FORWARDING_DOMAIN_PLACEHOLDER"
+      baseUrl: "https://cuddly-potato-6w6pp44vv524j66-30105.app.github.dev"
       frequencyMin: "1"
       enabled: "true"
       geoLocation: "GEOLOCATION-45AB48D9D6925ECC"
@@ -18,7 +18,7 @@ configs:
   config:
     name: "argo | platform | healthcheck"
     parameters:
-      baseUrl: "https://cuddly-potato-6w6pp44vv524j66-30100.GITHUB_CODESPACES_PORT_FORWARDING_DOMAIN_PLACEHOLDER"
+      baseUrl: "https://cuddly-potato-6w6pp44vv524j66-30100.app.github.dev"
       frequencyMin: "1"
       enabled: "true"
       geoLocation: "GEOLOCATION-45AB48D9D6925ECC"
